Fixed the overlaping navigation

--- a/app/scss/layout/_home.scss
+++ b/app/scss/layout/_home.scss
@@ -1,7 +1,6 @@
 @use '../variables' as var;
 
 .header {
-    max-width: 90em;
     padding: 1rem 1.875rem;
     position: relative;
     justify-content: center;
@@ -15,8 +14,11 @@
 
         .header__logo {
             flex-basis: 50%;
-        }
 
+            @media (min-width: 64em) {
+                flex-basis: 75%;
+            }
+        }
     }
 
     #hamburger,
@@ -70,7 +72,7 @@
     padding-inline: 1.875rem;
     text-align: center;
 
-    @media (min-width: 90em) {
+    @media (min-width: 64em) {
         height: 37.5rem;
         padding-block: 14.375rem 3.125rem;
         padding-inline: 3.125rem;
@@ -89,8 +91,8 @@
         font-size: var.$fs-30;
         margin-block-end: 1rem;
 
-        @media (min-width: 90em) {
-            font-size: var.$fs-50;
+        @media (min-width: 64em) {
+            font-size: 2.5rem;
             margin-block-end: 2.1875rem;
         }
     }
@@ -207,7 +209,7 @@
 }
 
 main {
-    @media (min-width: 90em) {
+    @media (min-width: 64em) {
         grid-template-columns: 1fr 1.5fr;
         padding: 6.25rem 8.75rem;
         gap: 6.25rem;
@@ -220,7 +222,7 @@ main {
 
     article {
 
-        @media (min-width: 48em) and (max-width: 89.9em) {
+        @media (min-width: 48em) and (max-width: 63.9em) {
             padding: 5rem;
             grid-template-columns: repeat(2, 1fr);
             column-gap: 2rem;
@@ -236,7 +238,7 @@ main {
             }
         }
 
-        @media (min-width: 90em) {
+        @media (min-width: 64em) {
             padding: 0;
         }
 
@@ -266,7 +268,7 @@ main {
             padding: 0 5rem 5rem;
         }
 
-        @media (min-width: 90em) {
+        @media (min-width: 64em) {
             padding: 0;
         }
 
@@ -307,7 +309,7 @@ main {
         padding: 3.75rem 5rem;
         gap: 2rem;
 
-        @media (min-width: 90em) {
+        @media (min-width: 64em) {
             grid-template-columns: 0.5fr 2fr 2fr 1fr;
         }
 
@@ -325,6 +327,7 @@ main {
             gap: 1.5rem;
 
             ul {
+                justify-self: end;
                 li {
                     margin-bottom: 0.3rem;
                 }
@@ -343,7 +346,7 @@ main {
                 color: var.$white;
             }
 
-            @media (min-width: 90em) {
+            @media (min-width: 64em) {
                 align-self: center;
                 justify-self: center;
             }
@@ -354,7 +357,7 @@ main {
             justify-self: end;
             gap: 1.25rem;
 
-            @media (min-width: 90em) {
+            @media (min-width: 64em) {
                 align-self: flex-start;
             }
         }
